# stt-bench-matrix

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.cuda  Dockerfile.cuda12  LICENSE  README.md  TODO.md  pyproject.toml
docker/: entrypoint.sh
samples/: jfk_rice_16k_20s.txt
src/stt_bench_matrix/: __init__.py  cli.py
src/stt_bench_matrix/bench/: __init__.py  audio.py  perf.py  progress.py  runner.py  samples.py  transcripts.py  types.py  wer.py
src/stt_bench_matrix/frameworks/: base.py  canary_nemo.py  faster_whisper.py  gemma_3n_onnx.py  granite_transformers.py  lightning_whisper_mlx.py  mlx_cleanup.py  moonshine_transformers.py  nemo_subprocess.py  nemotron_nemo.py  parakeet_mlx.py  parakeet_nemo.py  parakeet_transformers.py  registry.py  transformers_whisper.py  whisper_cpp.py  whisper_mlx.py  whisperx.py
src/stt_bench_matrix/models/: __init__.py  registry.py
src/stt_bench_matrix/reporting/: markdown.py
tools/nemo_runner/: pyproject.toml  run.py
tools/parakeet_runner/: pyproject.toml  run.py
tools/parakeet_runner/parakeet_runner/: __init__.py
